--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,16 +49,16 @@ Source = "https://github.com/yu9824/ternary-diagram"
 Tracker = "https://github.com/yu9824/ternary-diagram/issues"
 
 [project.scripts]
-ternary-diagram = "python_template.__main__:entrypoint"
+ternary-diagram = "ternary_diagram.__main__:entrypoint"
 
 # [project.gui-scripts]
-# ternary-diagram-gui = "python_template:main_gui"
+# ternary-diagram-gui = "ternary_diagram:main_gui"
 
 [tool.setuptools]
 package-dir = { "" = "src" }
 
 [tool.setuptools.dynamic]
-version = { attr = "python_template.__version__" }
+version = { attr = "ternary_diagram.__version__" }
 
 [tool.setuptools.packages.find]
 where = ["src/"]
